<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Monitoramento Persistente</string>
    <string name="device_admin_label">Administrador de Monitoramento</string>
    <string name="device_admin_description">Permite monitoramento persistente do dispositivo</string>
    <string name="monitoring_service_notification_title">Monitoramento Ativo</string>
    <string name="monitoring_service_notification_text">Coletando dados do sistema</string>
    <string name="enable_device_admin">Ativar Administrador</string>
    <string name="disable_device_admin">Desativar Administrador</string>
    <string name="start_monitoring">Iniciar Monitoramento</string>
    <string name="stop_monitoring">Parar Monitoramento</string>
    <string name="monitoring_status">Status do Monitoramento</string>
    <string name="admin_status">Status do Administrador</string>
    <string name="enabled">Ativado</string>
    <string name="disabled">Desativado</string>
</resources>